Add items to cart and Feign client configuration

--- a/cartservice/src/main/resources/application-dev.yml
+++ b/cartservice/src/main/resources/application-dev.yml
@@ -53,5 +53,5 @@ feign:
       default:
         connectTimeout: 5000
         readTimeout: 5000
-        loggerLevel: info
+        loggerLevel: basic
     
